--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@ js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement
 js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id
 =id;js.src='https://meandmygirlfriend.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs
 );}}(document,'script','meandmygirlfriend-io-js');
+<script>
 
-
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2ShtXavqbCFx3H8x3mFhNo?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-!function(d,s,id){var
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2ShtXavqbCFx3H8x3mFhNo?utm_source=generator" width="100%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<script>
+ !function(d,s,id){var
 js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id
 =id;js.src='https://uniquelymine.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs
 );}}(document,'script','uniquelymine-io-js');
-
 </script>
 
  
