--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement
 </script>
 
 
+
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6tcRqNWeggKBcaPpD8OOCP?utm_source=generator" width="100%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <script>
 !function(d,s,id){var
@@ -59,7 +60,8 @@ js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement
 </script>
 
 
- </div>
+
+</div>
  <div id="block2">
  <h2>Me & My Girlfriend </h2>
  <h2>content
@@ -74,14 +76,18 @@ js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement
 js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id
 =id;js.src='https://meandmygirlfriend.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs
 );}}(document,'script','meandmygirlfriend-io-js');
-<script>
+
+</script>
+
  
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2ShtXavqbCFx3H8x3mFhNo?utm_source=generator" width="100%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
 <script>
 !function(d,s,id){var
 js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id
 =id;js.src='https://uniquelymine.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs
 );}}(document,'script','uniquelymine-io-js');
+
 </script>
 
  
