--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
  <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N8KQJ31ZW7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N8KQJ31ZW7');
+</script>
  <title>Title of the document</title>
  <style>
  #defaultBlock { 
