--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
  </style>
  </head>
  <body>
+<body background="htmldesign3.JPG" width>
 <body style="background-color:pink">
  <main id="defaultBlock">
  <h2>Sajidul's Webpage</h2>
