--- a/index.html
+++ b/index.html
@@ -8,74 +8,51 @@
   gtag('js', new Date());
 
   gtag('config', 'G-N8KQJ31ZW7');
-</script>
- <title>Title of the document</title>
- <style>
- #defaultBlock { 
- display: table;
- }
- div {
- float:left;
- height: 1400px;
- width: 986px;
- padding: 10px;
- }
- #block1 {
- background-color: #900C3F;
- }
- #block2 {
- background-color: #8ADDFD;
- width: 986px;
- }
- #block3 {
- background-color: #FDFB8A;
- width: 986px;
- }
- #block4 {
- background-color: #93FD8A;
- width: 986px;
- }
- h2 {
+<style>
+        #defaultBlock {
+            display: table;
+        }
+        div {
+            float: left;
+            height: 1150px;
+            width: 481px;
+            padding: 10px;
+        }
+        #block1 {
+            background-color: #900C3F;
+        }
+        #block2 {
+            background-color: #8ADDFD;
+        }
+        #block3 {
+            background-color: #FDFB8A;
+        }
+        #block4 {
+            background-color: #93FD8A;
+            width: 986px;
+        }
+        h2 {
  text-align: center;
  }
  </style>
  </head>
  <body>
+
+<!body style="background-color: pink;">
 <body background="htmldesign3.JPG" width>
-<body style="background-color:pink">
- <main id="defaultBlock">
- <h2>Sajidul's Webpage</h2>
- <div id="block1">
- <h2>My Girlfriend</h2>
- <h2>Tasfia's Playlist:
 
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5QGGmU2TzhiUnH5GnErp0w?utm_source=generator" width="100%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
-<script>
-!function(d,s,id){var
-js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id
-=id;js.src='https://boyfiecore.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs
-);}}(document,'script','boyfiecore-io-js');
-</script>
-
-
-
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6tcRqNWeggKBcaPpD8OOCP?utm_source=generator" width="100%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-<script>
-!function(d,s,id){var
-js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id
-=id;js.src='https://ilovepupu.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs
-);}}(document,'script','ilovepupu-io-js');
-
-</script>
-
-
-
-</div>
- <div id="block2">
- <h2>Me & My Girlfriend </h2>
- <h2>content
-
+<main id="defaultBlock">
+    <h2>Sajidul's Webpage</h2>
+    <div id="block1">
+        <h2>My Girlfriend</h2>
+        <h2>Tasfia's Playlist:</h2>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5QGGmU2TzhiUnH5GnErp0w?utm_source=generator" width="100%" height="500" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <p></p>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6tcRqNWeggKBcaPpD8OOCP?utm_source=generator" width="100%" height="500" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
+    <div id="block2">
+        <h2>Me & My Girlfriend</h2>
+                <h2>Content</h2>
  </div>
  <div id="block3"> 
  <h2>Me</h2> 
