--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <html>
- <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-N8KQJ31ZW7"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-N8KQJ31ZW7');
-<style>
+<head>
+    <title>Sajidul's Webpage</title>
+    <style>
         #defaultBlock {
             display: table;
         }
@@ -53,32 +46,28 @@
     <div id="block2">
         <h2>Me & My Girlfriend</h2>
                 <h2>Content</h2>
- </div>
- <div id="block3"> 
- <h2>Me</h2> 
- <h2>Sajid's Playlist:
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7nBjRLkzw2PToZl8pB5U55?utm_source=generator" width="100%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-<script>
-!function(d,s,id){var
-js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id
-=id;js.src='https://meandmygirlfriend.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs
-);}}(document,'script','meandmygirlfriend-io-js');
+<img align = "center" = src="tasfia_1.JPG" width="480" height= "300">
+<p>
+<p>
+<p>              বোনা গাছের নিচে বসে, স্বপ্নের বোনে লুকিয়ে, 
+<P>                তোমার পদতলীর ধুলোয় জলের ঢেউ ভাসিয়ে,
+<P>                  একে অন্যের লেখা সকল গল্পে লিপ্ত হয়ে।
+<P>                    আমার প্রেম তো ছেটানো মুক্তা মাত্র তোমার সাগরের গভীরে, 
+<P>                      শোনে যে হারানো নাবিকের মুখে তোমার রূপের কত যে বর্ণনা,
+<P>                        তবে জানে কি তারা আমার প্রবাহের মধ্যেই গাঁথা তোমার সুন্দরতা।
+<p> 
+<p>
 
-</script>
 
- 
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2ShtXavqbCFx3H8x3mFhNo?utm_source=generator" width="100%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
+    <div id="block3">
+        <h2>Me</h2>
+        <h2>Sajid's Playlist:</h2>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7nBjRLkzw2PToZl8pB5U55?utm_source=generator" width="100%" height="500" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <p></p>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2ShtXavqbCFx3H8x3mFhNo?utm_source=generator" width="100%" height="500" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
 
-<script>
-!function(d,s,id){var
-js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id
-=id;js.src='https://uniquelymine.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs
-);}}(document,'script','uniquelymine-io-js');
-
-</script>
-
- 
- </div>
- </main>
- </body>
- </html>
+</main>
+</body>
+</html>
