--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
     </div>
     <div id="block2">
         <h2>Me & My Girlfriend</h2>
-                <h2>Content</h2>
-<img align = "center" = src="tasfia_1.JPG" width="480" height= "300">
-<p>
+                <h2></h2>
 <p>
 <p>              বোনা গাছের নিচে বসে, স্বপ্নের বোনে লুকিয়ে, 
 <P>                তোমার পদতলীর ধুলোয় জলের ঢেউ ভাসিয়ে,
@@ -56,6 +54,13 @@
 <P>                      শোনে যে হারানো নাবিকের মুখে তোমার রূপের কত যে বর্ণনা,
 <P>                        তবে জানে কি তারা আমার প্রবাহের মধ্যেই গাঁথা তোমার সুন্দরতা।
 <p> 
+<p>
+<p>রাত্রি শেষে দিগন্তের শিখায় সূর্য পুড়লো ,
+<p>পাখির গানে নিবন্ত শহর জ্বেলে উঠলো।
+<p>নতুন প্রাণে জেগে উঠলো শহরতলি,
+<p>কিন্তু রয়ে গেল অজানা নানা প্রাণই।
+
+<p>
 <p>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
     <script src="sketch.js"></script>
