--- a/index.html
+++ b/index.html
@@ -47,21 +47,36 @@
         <h2>Me & My Girlfriend</h2>
                 <h2></h2>
 <p>
-<p>              বোনা গাছের নিচে বসে, স্বপ্নের বোনে লুকিয়ে, 
-<P>                তোমার পদতলীর ধুলোয় জলের ঢেউ ভাসিয়ে,
-<P>                  একে অন্যের লেখা সকল গল্পে লিপ্ত হয়ে।
-<P>                    আমার প্রেম তো ছেটানো মুক্তা মাত্র তোমার সাগরের গভীরে, 
-<P>                      শোনে যে হারানো নাবিকের মুখে তোমার রূপের কত যে বর্ণনা,
-<P>                        তবে জানে কি তারা আমার প্রবাহের মধ্যেই গাঁথা তোমার সুন্দরতা।
-<p></p>
-<p></p>
-<p></p>
-<p>রাত্রি শেষে দিগন্তের শিখায় সূর্য পুড়লো ,
-<p>পাখির গানে নিবন্ত শহর জ্বেলে উঠলো।
-<p>নতুন প্রাণে জেগে উঠলো শহরতলি,
-<p>কিন্তু রয়ে গেল অজানা নানা প্রাণই।
-<p></p>
-<p></p>
+<p>  কালো মেঘে ঢাকা পড়া চাঁদের আলো,
+<p></p>মিশিয়ে দিলো সাদা আলো ছায়া কালো,
+<p></p>চোখের মায়ায় সবই যেন দেখায় ভালো,
+<p></p>বাস্তবে তো সকল সংসার হারিয়ে গেলো।
+
+<p></p>হারানো সেই চাঁদের আলো,
+<p></p>হারিয়ে গেলো ঘুমের দেশে, স্বপ্ন কারো।
+<p></p>কুয়োর তলে পড়ে থাকা ইচ্ছে গুলো,
+<p></p>স্তব্ধ শহর থেকে মুক্তি পেলো।
+
+<p></p>শহরতলীর আড়ালে লুকিয়ে থাকো তুমি, 
+<p></p>লুকিয়ে সে গোপন মনে।
+<p></p>চারিপাশের অজানা সব পুতুল খেলা,
+<p></p>ঝাপসা রাতে সকল কষ্ট নিজের কাছে।
+<p></p>জানালার ফাঁকে দিয়ে চেয়ে রও গভীর আকাশে, 
+<p></p>আশায় ভালোবেসে।
+<p></p>শহরের স্তব্ধতায় যদি থেকে যায় স্তব্ধ মন, 
+<p></p>হারানোর হতাশায় নিজেকে,
+
+<p></p>ডুবিয়ে দাও পাহাড় পর্বত তোমার স্বপ্নের ছায়াতে,
+<p></p>ভেসে যাবে তোমার গান নদীর স্রোতে,
+<p></p>ছিটিয়ে দাও সকল কষ্ট অন্তহীন জীবন্ত আকাশে,
+<p></p>সুখের ফোটায় ফুটবে মৃত ফুল জীবন ফিরে।
+
+<p></p>রাত্রি শেষে দিগন্তের শিখায় সূর্য পুড়লো ,
+<p></p>পাখির গানে নিবন্ত শহর জ্বেলে উঠলো।
+<p></p>নতুন প্রাণে জেগে উঠলো শহরতলি,
+<p></p>কিন্তু রয়ে গেল অজানা নানা প্রাণই।          
+<p>
+<p>
 
 <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
     <script src="sketch.js"></script>
