--- a/index.html
+++ b/index.html
@@ -47,24 +47,13 @@
         <h2>Me & My Girlfriend</h2>
                 <h2></h2>
 <p>
-<p>  কালো মেঘে ঢাকা পড়া চাঁদের আলো,
-<p></p>মিশিয়ে দিলো সাদা আলো ছায়া কালো,
-<p></p>চোখের মায়ায় সবই যেন দেখায় ভালো,
-<p></p>বাস্তবে তো সকল সংসার হারিয়ে গেলো।
+<p>  বোনা গাছের নিচে বসে, স্বপ্নের বোনে লুকিয়ে, 
+<p></p>তোমার পদতলীর ধুলোয় জলের ঢেউ ভাসিয়ে,
+<p></p>একে অন্যের লেখা সকল গল্পে লিপ্ত হয়ে।
+<p></p>আমার প্রেম তো ছেটানো মুক্তা মাত্র তোমার সাগরের গভীরে, 
+<p></p>শোনে যে হারানো নাবিকের মুখে তোমার রূপের কত যে বর্ণনা,
+<p></p>তবে জানে কি তারা আমার প্রবাহের মধ্যেই গাঁথা তোমার সুন্দরতা।
 
-<p></p>হারানো সেই চাঁদের আলো,
-<p></p>হারিয়ে গেলো ঘুমের দেশে, স্বপ্ন কারো।
-<p></p>কুয়োর তলে পড়ে থাকা ইচ্ছে গুলো,
-<p></p>স্তব্ধ শহর থেকে মুক্তি পেলো।
-
-<p></p>শহরতলীর আড়ালে লুকিয়ে থাকো তুমি, 
-<p></p>লুকিয়ে সে গোপন মনে।
-<p></p>চারিপাশের অজানা সব পুতুল খেলা,
-<p></p>ঝাপসা রাতে সকল কষ্ট নিজের কাছে।
-<p></p>জানালার ফাঁকে দিয়ে চেয়ে রও গভীর আকাশে, 
-<p></p>আশায় ভালোবেসে।
-<p></p>শহরের স্তব্ধতায় যদি থেকে যায় স্তব্ধ মন, 
-<p></p>হারানোর হতাশায় নিজেকে,
 
 <p></p>ডুবিয়ে দাও পাহাড় পর্বত তোমার স্বপ্নের ছায়াতে,
 <p></p>ভেসে যাবে তোমার গান নদীর স্রোতে,
