--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         h2 {
  text-align: center;
  }
+        .bottom-link {
+            display: block;
+            text-align: center;
+            font-size: 24px; /* Adjust the font size as needed */
+            margin-top: 20px; /* Add margin to separate from other content */
+        }
  </style>
  </head>
  <body>
@@ -81,7 +87,7 @@
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2ShtXavqbCFx3H8x3mFhNo?utm_source=generator" width="100%" height="500" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 <a href="https://sajidul-chowdhury.github.io/" class="bottom-link">Go Back to My Main WebPage</a>
-
 </main>
+
 </body>
 </html>
