--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-85K60CXF0Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-85K60CXF0Z');
+</script>
+    
     <title>Sajidul's Webpage</title>
     <style>
         #defaultBlock {
